--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <style>
   body {
-    background: linear-gradient(to right, rgb(67, 7, 124), rgb(117, 30, 151));
+    background: linear-gradient(to right, #004aad, #cb6ce6);
   }
 
   * {
